--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "twitterlinux",
   "version": "1.0.1",
-  "description": "Simple. Secure. Reliable messaging. With WhatsApp, you'll get fast, simple, secure messaging and calling for free*, available on phones all over the world.",
+  "description": "What's happening?!. everywhere.",
   "main": "app/main.js",
   "maintainers": [
     "Kerron Gordon"
